# Drone-server

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Project_diagrams.mdj  README.md  main.cpp  prueba.cpp  run_drone_server_n_times.bash  run_tests.bash
docker/: Dockerfile  docker-compose.yml
flag/: Makefile  flag.cpp  flag.hpp
flag_search/: main.cpp
flag_search/src/flag/: CMakeLists.txt  flag.cpp  flag.hpp
flag_search/src/missioncontrol/: CMakeLists.txt  missioncontrol.cpp  missioncontrol.hpp
flag_search/src/missionhelper/: CMakeLists.txt  missionhelper.cpp  missionhelper.hpp
flag_search/src/poly/: CMakeLists.txt  line.cpp  line.hpp  point.cpp  point.hpp  polygon.cpp  polygon.hpp  segment.cpp  vector.cpp  vector.hpp
flag_search/test/: flag_test.cpp  missionhelper_test.cpp  poly_test.cpp
lib/errorcontrol/: error_control.hpp
lib/flag/: CMakeLists.txt  flag.cpp  flag.hpp
lib/log/: CMakeLists.txt  log.cpp  log.hpp
lib/missioncontrol/: CMakeLists.txt  missioncontrol.cpp  missioncontrol.hpp
lib/missionhelper/: CMakeLists.txt  missionhelper.cpp  missionhelper.hpp
lib/operation/: CMakeLists.txt  operation.cpp  operation.hpp
lib/poly/: line.cpp  line.hpp  point.cpp  point.hpp  polygon.cpp  polygon.hpp  segment.cpp  vector.cpp  vector.hpp
src/Logger/: CMakeLists.txt  Class_diagram.mdj  log_demo.cpp  logger_example_tfg.cpp
src/Logger/include/: decoration.hpp  greeter.hpp  level.hpp  levelfilter.hpp  logger.hpp  loggerbuilder.hpp
src/Logger/src/log/: decoration.cpp  greeter.cpp  level.cpp  levelfilter.cpp  logger.cpp  loggerbuilder.cpp
src/Logger/test/: log_test.cpp
src/errorcontrol/: CMakeLists.txt  error_control.cpp  error_control.hpp
src/flag/: flag.hpp
src/log/: log.cpp  log.hpp
src/missioncontrol/: CMakeLists.txt  missioncontrol.cpp  missioncontrol.hpp
src/missionhelper/: CMakeLists.txt  missionhelper.cpp  missionhelper.hpp
src/operation/: operation.cpp  operation.hpp
src/poly/: point.hpp  polygon.cpp
test/: flag_test.cpp  log_demo.cpp  log_test.cpp  missionhelper_test.cpp  operation_test.cpp  poly_test.cpp
